--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,10 @@
 }
 
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+button {
+  @apply cursor-pointer;
 }
