--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  --toastify-toast-width: 320px;
+  --toastify-toast-offset: 56px;
+  --toastify-toast-shadow: 0px 1px 20px rgba(0, 0, 0, 0.2);
 }
 
 #root {
